force-app/main/default/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Private_Note_Engineering_SEMTE__c</fullName>
        <description>Private Note area for Fulton Schools of Engineering - SEMTE</description>
        <inlineHelpText>This Private Note area is visible and editable only to FSE SEMTE team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note - Engineering SEMTE</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Engineering_SSEBE__c</fullName>
        <description>Private Note area for Fulton Schools of Engineering - SSEBE</description>
        <inlineHelpText>This Private Note area is visible and editable only to FSE SSEBE team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note - Engineering SSEBE</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Engineering_UG_Recruitment__c</fullName>
        <description>Private Note area for Engineering - Undergraduate Recruitment.</description>
        <inlineHelpText>Private notes are visible and editable only to Fulton Schools of Engineering - Undergraduate Recruitment team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note-Engineering UG Recruitment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Financial_Aid__c</fullName>
        <description>[??] - Private notes are visible only to Financial Aid team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Financial Aid team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Financial Aid</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Fulton_Engineering_IT__c</fullName>
        <description>[??] - Private notes are visible only to Fulton Engineering IT team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private note for Fulton Engineering IT.</inlineHelpText>
        <label>Private Note - Fulton Engineering IT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Graduate_Admissions__c</fullName>
        <description>[??] - Private notes are visible only to Graduate Admissions team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Graduate Admissions team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Graduate Admissions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Graduate_Education__c</fullName>
        <description>Private note area for Graduate Education</description>
        <inlineHelpText>Private notes are visible only to the Graduate Education team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Graduate Education</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Health_Solutions__c</fullName>
        <description>[??] - Private Note for Health Solutions</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Health Solutions agents, only.</inlineHelpText>
        <label>Private Note - Health Solutions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Help_Desk__c</fullName>
        <description>[??] - Private notes are visible only to Help Desk team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Help Desk team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Help Desk</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Honors__c</fullName>
        <description>[??] - Private Note for Honors</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Honors agents, only.</inlineHelpText>
        <label>Private Note - Honors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Identity_Management__c</fullName>
        <description>[??] - Private note for Identity Management.</description>
        <inlineHelpText>Private note for Identity Management.</inlineHelpText>
        <label>Private Note - Identity Management</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Journalism__c</fullName>
        <description>Private Note for Journalism</description>
        <inlineHelpText>Private Note for Journalism</inlineHelpText>
        <label>Private Note - Journalism</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Letters_and_Sciences__c</fullName>
        <description>Private note for Integrative Sciences and Arts</description>
        <inlineHelpText>Private note for Integrative Sciences and Arts users.</inlineHelpText>
        <label>Private Note - Integrative Sciences</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Liberal_Arts_and_Sciences__c</fullName>
        <description>[??] - Private Note for Liberal Arts and Sciences</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Liberal Arts and Sciences agents, only.</inlineHelpText>
        <label>Private Note - Liberal Arts and Sciences</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Library_Services__c</fullName>
        <description>[??] - Private note for Library Services.</description>
        <inlineHelpText>Private note for Library Services.</inlineHelpText>
        <label>Private Note - Library Services</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_NewStudent_FamilyPrograms__c</fullName>
        <description>Private Note area for New Student and Family Programs.</description>
        <inlineHelpText>Private notes are visible and editable only to New Student and Family Programs team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note - NewStudent+FamilyPrograms</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_New_College__c</fullName>
        <description>[??] - Private Note for New College</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by New College agents, only.</inlineHelpText>
        <label>Private Note - New College</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Nursing__c</fullName>
        <description>[??] - Private Note for Nursing</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Nursing and Health Innovation agents, only.</inlineHelpText>
        <label>Private Note - Nursing</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Office_of_the_President__c</fullName>
        <description>[??] - Private Note for Office of the President</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Office of the President agents, only.</inlineHelpText>
        <label>Private Note - Office of the President</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Outreach__c</fullName>
        <description>Private Note for Outreach</description>
        <inlineHelpText>Private Note for Outreach</inlineHelpText>
        <label>Private Note - Outreach</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Public_Programs__c</fullName>
        <description>[??] - Private Note for Public Programs</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Public Programs agents, only.</inlineHelpText>
        <label>Private Note - Public Programs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Registrar__c</fullName>
        <description>[??] - Private notes are visible only to Registrar team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Registrar team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Registrar</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_S_Centric_Initiatives__c</fullName>
        <description>[??] - Private Note for Student-Centric Initiatives</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Student-Centric Initiatives agents, only.</inlineHelpText>
        <label>Private Note - S-Centric Initiatives</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Student_Business_Services__c</fullName>
        <description>[??] - Private notes are visible only to Student Business Services team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Student Business Services team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Student Business Services</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Sustainability__c</fullName>
        <description>[??] - Private Note for Sustainability</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Sustainability agents, only.</inlineHelpText>
        <label>Private Note - Sustainability</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Tech_Studio__c</fullName>
        <description>[??] - Private note for Tech Studio.</description>
        <inlineHelpText>Private note for Tech Studio.</inlineHelpText>
        <label>Private Note - Tech Studio</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Undergraduate_Admissions__c</fullName>
        <description>Private notes are visible only to Undergraduate Admission team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Undergraduate Admission team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Undergraduate Admissions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_W_P_Carey__c</fullName>
        <description>[??] - Private note for W.P. Carey</description>
        <label>Private Note - WPC Tech Services</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <description>Picklist field to indicate the status of the processing request.</description>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Psychology Review</fullName>
                </value>
                <value>
                    <fullName>Nursing Review</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Approved - by Recruiter</fullName>
                </value>
                <value>
                    <fullName>Received - App Fee Paid</fullName>
                </value>
                <value>
                    <fullName>Received - Missing Info</fullName>
                </value>
                <value>
                    <fullName>Received - Needs to Apply/Re-Apply</fullName>
                </value>
                <value>
                    <fullName>Received - Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Approved - Online</fullName>
                </value>
                <value>
                    <fullName>Not Approved - Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Administratively_Closed__c</fullName>
        <description>If case status is "Closed: Administratively Resolved (No Outreach)", a reason should be entered in this field.</description>
        <inlineHelpText>If Closed: Administratively Resolved (No Outreach), enter the reason.</inlineHelpText>
        <label>Reason Administratively Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Escalation__c</fullName>
        <businessOwnerGroup>Help_Desk_Case</businessOwnerGroup>
        <description>This field is used by Help Desk when transferring cases to Financial Aid and Student Business Services functional group. This field retains it's value when transferring via the case transfer page</description>
        <inlineHelpText>Help Desk: select a value from this list when transferring to Financial Aid or Student Business Services</inlineHelpText>
        <label>Reason for Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple Callbacks</fullName>
                </value>
                <value>
                    <fullName>Previously Spoke with Counselor</fullName>
                </value>
                <value>
                    <fullName>Requested Manager</fullName>
                </value>
                <value>
                    <fullName>Upset Caller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasons_Not_Returning_Other__c</fullName>
        <label>Reason(s) Not Returning Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_Not_Returning__c</fullName>
        <label>Reason(s) Not Returning</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Compassionate Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Graduating</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Job Opportunity</fullName>
                </value>
                <value>
                    <fullName>Judicial Affairs</fullName>
                </value>
                <value>
                    <fullName>Medical Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Military Leave</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Religious Mission Leave</fullName>
                </value>
                <value>
                    <fullName>Social Engagement</fullName>
                </value>
                <value>
                    <fullName>Transferring In-State (other)</fullName>
                </value>
                <value>
                    <fullName>Transferring Out-of-State (2-year)</fullName>
                </value>
                <value>
                    <fullName>Transferring Out-of-State (4-year)</fullName>
                </value>
                <value>
                    <fullName>Transferring Public In-State ( 2 year)</fullName>
                </value>
                <value>
                    <fullName>Transferring Public In-State (4-year)</fullName>
                </value>
                <value>
                    <fullName>Compassionate W/D</fullName>
                    <isActive>false</isActive>
                    <label>Compassionate W/D</label>
                </value>
                <value>
                    <fullName>Medical W/D</fullName>
                    <isActive>false</isActive>
                    <label>Medical W/D</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Actions_Other__c</fullName>
        <label>Recommended Action(s) Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Actions__c</fullName>
        <label>Recommended Action(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>address financial issues</fullName>
                </value>
                <value>
                    <fullName>adjust course balance</fullName>
                </value>
                <value>
                    <fullName>advised about progression issues</fullName>
                </value>
                <value>
                    <fullName>career counseling</fullName>
                </value>
                <value>
                    <fullName>correct schedule - other</fullName>
                </value>
                <value>
                    <fullName>correct schedule - to be on track</fullName>
                </value>
                <value>
                    <fullName>declare or change major</fullName>
                </value>
                <value>
                    <fullName>non­financial collegiate issues</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>register for classes</fullName>
                </value>
                <value>
                    <fullName>see instructor</fullName>
                </value>
                <value>
                    <fullName>seek academic advising</fullName>
                </value>
                <value>
                    <fullName>seek academic coaching</fullName>
                </value>
                <value>
                    <fullName>seek departmental or faculty guidance</fullName>
                </value>
                <value>
                    <fullName>seek DRC</fullName>
                </value>
                <value>
                    <fullName>seek engagement opportunities</fullName>
                </value>
                <value>
                    <fullName>seek first-year success coaching</fullName>
                </value>
                <value>
                    <fullName>seek medical professional</fullName>
                </value>
                <value>
                    <fullName>seek professional counseling</fullName>
                </value>
                <value>
                    <fullName>seek tutoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruiter_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true the Recruiter will be assigned a Task to follow up with the Student.</inlineHelpText>
        <label>Recruiter Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <description>Displays the owner of the Opportunity.</description>
        <formula>Opportunity__r.Owner.Recruiter_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Owner of the Opportunity record.</inlineHelpText>
        <label>Recruiter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reply Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Category__c</fullName>
        <description>Picklist value to further categorize cases</description>
        <label>Help Desk Reporting Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept/Decline</fullName>
                </value>
                <value>
                    <fullName>Account Creation </fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Appeals Past Due Fees</fullName>
                </value>
                <value>
                    <fullName>Award Criteria</fullName>
                </value>
                <value>
                    <fullName>Balance After Payment</fullName>
                </value>
                <value>
                    <fullName>Balance Past Due</fullName>
                </value>
                <value>
                    <fullName>Book Grant</fullName>
                </value>
                <value>
                    <fullName>Cancel Aid</fullName>
                </value>
                <value>
                    <fullName>Certification Status</fullName>
                </value>
                <value>
                    <fullName>Charge Breakdown</fullName>
                </value>
                <value>
                    <fullName>Citizenship Verification </fullName>
                </value>
                <value>
                    <fullName>Deadlines </fullName>
                </value>
                <value>
                    <fullName>Default </fullName>
                </value>
                <value>
                    <fullName>Disbursement Hold</fullName>
                </value>
                <value>
                    <fullName>Disbursement Status</fullName>
                </value>
                <value>
                    <fullName>Dropping a Class</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Email Verification or Reset </fullName>
                </value>
                <value>
                    <fullName>Entrance Counseling</fullName>
                </value>
                <value>
                    <fullName>E-Sign </fullName>
                </value>
                <value>
                    <fullName>Exit Counseling</fullName>
                </value>
                <value>
                    <fullName>FA Impact</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Federal Work Study</fullName>
                </value>
                <value>
                    <fullName>Funding</fullName>
                </value>
                <value>
                    <fullName>Guest Access</fullName>
                </value>
                <value>
                    <fullName>Household Size Verification </fullName>
                </value>
                <value>
                    <fullName>Independent Status Verification </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Running_User_Is_Contact__c</fullName>
        <formula>IF($User.EmployeeNumber = Contact.EMPLID__c, True, False)</formula>
        <label>Running User Is Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEED__c</fullName>
        <description>Displays icon if the student is a SEED student.</description>
        <formula>Contact.SEED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays icon if the student is a SEED student.</inlineHelpText>
        <label>SEED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STRM__c</fullName>
        <description>to indicate the Term for the Case Indicator Flag</description>
        <label>Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Code__c</fullName>
        <label>Session Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Decode__c</fullName>
        <description>or identifying the Session that the Case Creation Indicator Flag was triggered</description>
        <label>Session Decode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>for tracking the Session associated with the Case Creation Indicator</description>
        <label>Session</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Intention__c</fullName>
        <description>Used to note if the student will be returning. Viewable on the ASU Advisor Outreach and ASU Coach Outreach Cases only.</description>
        <label>Student's Intention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Not returning ever</fullName>
                </value>
                <value>
                    <fullName>Not returning temporarily</fullName>
                </value>
                <value>
                    <fullName>Will enroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Presented_Risk_for_Other__c</fullName>
        <label>Student Presented Risk for  Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Presented_Risk_for__c</fullName>
        <description>Picklist appears when student is returning is populated</description>
        <label>Student Presented Risk for:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Compassionate Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Job Opportunity</fullName>
                </value>
                <value>
                    <fullName>Judicial Affairs</fullName>
                </value>
                <value>
                    <fullName>Medical Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Social Engagement</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Compassionate W/D</fullName>
                    <isActive>false</isActive>
                    <label>Compassionate W/D</label>
                </value>
                <value>
                    <fullName>Medical W/D</fullName>
                    <isActive>false</isActive>
                    <label>Medical W/D</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Profile__c</fullName>
        <formula>IF( AND(NOT(ISBLANK(TEXT(Contact.Affiliation_Student__c))), Contact.RecordTypeId = "012d0000000wzM4") ,
HYPERLINK('/apex/StudentProfileRedirect?studentId=' + Contact.EMPLID__c, 'Open', '_self'), NULL)</formula>
        <label>Student Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Visa__c</fullName>
        <description>[peoplesoft] - Formula field that displays whether or not the Contact__r.Visa_Type__c contains F1 or J1 visa types.</description>
        <formula>IF(INCLUDES( Contact.Visa_Type__c, "F1"), "F1" + BR(), NULL)+
IF(INCLUDES( Contact.Visa_Type__c, "J1"), "J1", NULL)</formula>
        <label>Student Visa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Display__c</fullName>
        <formula>IF(isPickVal( Sub_Category__c,"" ),"(not indicated)",text( Sub_Category__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Category Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Support</fullName>
                </value>
                <value>
                    <fullName>ABSL-1</fullName>
                </value>
                <value>
                    <fullName>ABSL-2</fullName>
                </value>
                <value>
                    <fullName>ABSL-3</fullName>
                </value>
                <value>
                    <fullName>Academic/Professional</fullName>
                </value>
                <value>
                    <fullName>Academic Calendar</fullName>
                </value>
                <value>
                    <fullName>Academic Holds</fullName>
                </value>
                <value>
                    <fullName>Access/Login</fullName>
                </value>
                <value>
                    <fullName>Access/Permissions</fullName>
                </value>
                <value>
                    <fullName>Account Adjustments</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>ACETS</fullName>
                </value>
                <value>
                    <fullName>ACL-1</fullName>
                </value>
                <value>
                    <fullName>ACL-2</fullName>
                </value>
                <value>
                    <fullName>ACL-3</fullName>
                </value>
                <value>
                    <fullName>Adding a Guest</fullName>
                </value>
                <value>
                    <fullName>Additional Information Coversheet</fullName>
                </value>
                <value>
                    <fullName>Adidas</fullName>
                </value>
                <value>
                    <fullName>Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Admission Requirements</fullName>
                </value>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Admit/Conditional Letter Inquiry</fullName>
                </value>
                <value>
                    <fullName>Adobe Connect/Presenter</fullName>
                </value>
                <value>
                    <fullName>Advancement</fullName>
                </value>
                <value>
                    <fullName>Advising</fullName>
                </value>
                <value>
                    <fullName>Advising Referral</fullName>
                </value>
                <value>
                    <fullName>Advisor Portal</fullName>
                </value>
                <value>
                    <fullName>Agent Specific</fullName>
                </value>
                <value>
                    <fullName>Agent Specific Training</fullName>
                </value>
                <value>
                    <fullName>Aggregates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>